manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "zia-57af"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "zia-57af"
  template:
    metadata:
      labels:
        app: "zia-57af"
    spec:
      containers:
        - name: "zia-57af"
          image: "vmpods.azurecr.io/zia"
          ports:
          - containerPort: 80
