manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "zia-57af"
    labels:
        app: "zia-57af"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: default-zia-57af.a745fce7093042b59965.southcentralus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "zia-57af"
                servicePort: 80
